--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,9 @@
   },
   "resolutions": {
     "angular": "~1.3"
+  },
+  "devDependencies": {
+    "angular-bootstrap": "~0.14.3",
+    "bootstrap": "~3.3.5"
   }
 }
